--- a/CarServicePlanner/appsettings.json
+++ b/CarServicePlanner/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=HPNIKOLA\\SQL;Database=CarServicePlannerDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
